library/kubernetess/java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: library-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
