library/kubernetess/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: library-ns
spec:
  podSelector: {}  # Selects all pods in the namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector: {}  # Allows from all namespaces (for testing)
        podSelector: {}    # Allows from all pods (for testing)
